--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>BlackJack</h1>
+    <h1>BlackJack game</h1>
     
     <p class="message" id="message-el">Start the game.</p>
     <p class="cards" id="cards-el">Cards:</p>
